<resources>
    <string name="app_name">Humanaid</string>
    <string name="name">Όνομα φυσιοθεραπευτηρίου</string>
    <string name="adress">Διεύθυνση</string>
    <string name="afm">ΑΦΜ</string>
    <string name="main_button">Προσθήκη</string>
    <string name="sec_button">Ακύρωση</string>
    <string name="welcome">Καλωσορίσατε</string>
    <string name="paragraph">"Ξεκινήστε την εμπειρία σας στο νέο σύστημα  \n διαχείρισης και προσθήκης  νέων \n φυσιοθεραπευτηρίων και παροχών"</string>
    <string name="id_service">Κωδικός</string>
    <string name="name_service">Όνομα παροχής</string>
    <string name="description">Περιγραφή</string>
    <string name="cost">Κόστος/ανά συνεδρία</string>
    <string name="success_parag">"Η ενέργειά σας \n ολοκληρώθηκε με επιτυχία"</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="buttonLogin">Σύνδεση</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spinner_prompt">Επιλέξτε φυσικοθεραπευτήριο</string>
    <string name="paragraph1">Ξεκινήστε την εμπειρία σας στο νέο σύστημα διαχείρισης των ασθενών και των ραντεβού σας</string>
    <string name="patient_name">Όνομα ασθενή</string>
    <string name="patient_AMKA">AMKA</string>
    <string name="string_in_patient">Προσθήκη νέου ασθενή:</string>
    <string name="login_button">Σύνδεση</string>
    <string name="forgot_pass">Ξεχάσατε τον κωδικό σας; \n Επικοινωνήστε μαζί μας</string>
    <string name="bullet">bullet</string>
    <string name="slash">/</string>
    <string name="calendar">Ημερολόγιο:</string>



</resources>