<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServicesFragment"
    android:background="@color/background">

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/custom_input"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/manrope_medium"
        android:padding="15dp"
        android:spinnerMode="dropdown"
        android:prompt="@string/spinner_prompt"
        android:drawableEnd="@drawable/arrow_down"
        />




    <EditText
        android:id="@+id/service_id"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/id_service"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_spinner"
        android:fontFamily="@font/manrope_medium"
        android:background="@drawable/custom_input"
        android:padding="15dp"
        />

    <EditText
        android:id="@+id/service_name"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/name_service"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_id"
        android:fontFamily="@font/manrope_medium"
        android:background="@drawable/custom_input"
        android:padding="15dp"
        />
    <EditText
        android:id="@+id/service_description"
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/description"
        android:textSize="16sp"
        android:gravity="left"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_name"
        android:fontFamily="@font/manrope_medium"
        android:background="@drawable/custom_input"
        android:padding="15dp"
        android:lines="5"
        />

    <EditText
        android:id="@+id/service_cost"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/cost"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_description"
        android:fontFamily="@font/manrope_medium"
        android:background="@drawable/custom_input"
        android:padding="15dp"
        />


    <Button
        android:id="@+id/mAinButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:backgroundTint="@color/MainColor"
        android:fontFamily="@font/manrope_bold"

        android:insetTop="5dp"
        android:insetBottom="5dp"
        android:text="@string/main_button"
        app:cornerRadius="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_cost"
        app:layout_constraintVertical_bias="0.17" />

    <Button
        android:id="@+id/SecButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:backgroundTint="@color/white"
        android:fontFamily="@font/manrope_bold"

        android:insetTop="5dp"
        android:insetBottom="5dp"
        android:text="@string/sec_button"
        android:textColor="@color/MainColor"
        app:cornerRadius="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mAinButton"

        app:layout_constraintVertical_bias="0.0"

        app:strokeColor="@color/MainColor"
        app:strokeWidth="3dp" />




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
