<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background">

<!--<Button-->
<!--    android:id="@+id/exit_button"-->
<!--    style="@style/Widget.App.Button.OutlinedButton.IconOnly"-->
<!--    android:layout_width="50dp"-->
<!--    android:layout_height="50dp"-->

<!--    android:layout_marginStart="320dp"-->

<!--    android:background="@color/transparent"-->

<!--    app:icon="@drawable/exit"-->
<!--    app:iconTint="@color/letter"-->
<!--    app:layout_constraintBottom_toTopOf="@+id/name_patient"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toTopOf="parent"-->
<!--    app:layout_constraintVertical_bias="0.36" />-->

<Button
    android:id="@+id/cancelButton"
    android:layout_width="200dp"
    android:layout_height="wrap_content"

    android:layout_marginTop="5dp"
    android:layout_marginBottom="64dp"

    android:backgroundTint="@color/white"
    android:insetTop="5dp"
    android:insetBottom="5dp"
    android:text="@string/sec_button"

    android:textColor="@color/MainColor"
    app:cornerRadius="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/addButton"

    app:layout_constraintVertical_bias="0.01"
    app:strokeColor="@color/MainColor"
    app:strokeWidth="3dp" />

<Button
    android:id="@+id/addButton"
    android:layout_width="200dp"
    android:layout_height="wrap_content"

    android:layout_marginTop="5dp"

    android:backgroundTint="@color/MainColor"
    android:insetTop="5dp"
    android:insetBottom="5dp"

    android:text="@string/main_button"
    app:cornerRadius="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/AMKA_patient"
    app:layout_constraintVertical_bias="0.351" />

<!--<Button-->

<!--    android:id="@+id/back_button"-->
<!--    style="@style/Widget.App.Button.OutlinedButton.IconOnly"-->
<!--    android:layout_width="50dp"-->
<!--    android:layout_height="50dp"-->

<!--    android:layout_marginRight="320dp"-->
<!--    android:background="@color/transparent"-->
<!--    app:icon="@drawable/back"-->
<!--    app:iconTint="@color/letter"-->
<!--    app:layout_constraintBottom_toTopOf="@+id/name_patient"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toTopOf="parent"-->
<!--    app:layout_constraintVertical_bias="0.36" />-->

<EditText
    android:id="@+id/adress_patient"
    android:layout_width="370dp"
    android:layout_height="55dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/custom_input"
    android:ems="10"
    android:hint="@string/adress"
    android:padding="15dp"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.512"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/name_patient" />

<EditText
    android:id="@+id/AMKA_patient"
    android:layout_width="370dp"
    android:layout_height="55dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/custom_input"
    android:ems="10"
    android:hint="@string/patient_AMKA"
    android:padding="15dp"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.487"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/adress_patient" />

<EditText
    android:id="@+id/name_patient"
    android:layout_width="370dp"
    android:layout_height="55dp"
    android:layout_marginTop="180dp"
    android:background="@drawable/custom_input"
    android:ems="10"
    android:hint="@string/patient_name"
    android:padding="15dp"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"


    />

<TextView
    android:id="@+id/text_in_patient"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/string_in_patient"
    android:textColor="@color/MainColor"
    android:textSize="24sp"
    app:layout_constraintBottom_toTopOf="@+id/name_patient"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.804" />

<!--<ImageButton-->
<!--    android:id="@+id/profile_button"-->
<!--    android:layout_width="50dp"-->
<!--    android:layout_height="50dp"-->
<!--    android:layout_marginEnd="1dp"-->
<!--    android:background="@color/transparent"-->
<!--    app:layout_constraintBottom_toTopOf="@+id/name_patient"-->
<!--    app:layout_constraintEnd_toStartOf="@+id/exit_button"-->
<!--    app:layout_constraintHorizontal_bias="0.98"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toTopOf="parent"-->
<!--    app:layout_constraintVertical_bias="0.369"-->
<!--    app:srcCompat="@drawable/profile" />-->

<!--<ImageButton-->
<!--    android:id="@+id/add_button"-->
<!--    android:layout_width="50dp"-->
<!--    android:layout_height="50dp"-->
<!--    android:layout_marginEnd="1dp"-->
<!--    android:background="@color/transparent"-->
<!--    app:layout_constraintBottom_toTopOf="@+id/name_patient"-->
<!--    app:layout_constraintEnd_toStartOf="@+id/profile_button"-->
<!--    app:layout_constraintHorizontal_bias="0.98"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toTopOf="parent"-->
<!--    app:layout_constraintVertical_bias="0.36"-->
<!--    app:srcCompat="@drawable/add" />-->

<!--<ImageButton-->
<!--    android:id="@+id/home_button"-->
<!--    android:layout_width="50dp"-->
<!--    android:layout_height="50dp"-->
<!--    android:layout_marginEnd="1dp"-->
<!--    android:background="@drawable/circle"-->
<!--    app:layout_constraintBottom_toTopOf="@+id/name_patient"-->
<!--    app:layout_constraintEnd_toStartOf="@+id/add_button"-->
<!--    app:layout_constraintHorizontal_bias="0.98"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toTopOf="parent"-->
<!--    app:layout_constraintVertical_bias="0.36"-->
<!--    app:srcCompat="@drawable/home" />-->

</androidx.constraintlayout.widget.ConstraintLayout>