<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/bgcolor">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="169dp"
        android:layout_height="70dp"
        android:layout_marginEnd="130dp"
        app:layout_constraintBottom_toTopOf="@id/login_textview"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/loginicon" />

    <TextView
        android:id="@+id/login_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="170dp"
        android:gravity="center"

        android:text="@string/Login"

        android:textColor="@color/MainColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <EditText
        android:id="@+id/username"
        android:layout_width="369dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:layout_marginEnd="20dp"
        android:autofillHints="username"
        android:background="@drawable/roundedtext"


        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="15dp"
        android:fontFamily="@font/manrope_medium"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="1dp"
        android:paddingEnd="1dp"
        android:textColor="@color/usernamecolor"
        android:textColorHint="@color/usernamecolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_textview"
        app:layout_constraintBottom_toTopOf="@id/password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="369dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"

        android:autofillHints="password"
        android:background="@drawable/roundedtext"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="30dp"

        android:fontFamily="@font/manrope_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textColor="@color/usernamecolor"
        android:textColorHint="@color/usernamecolor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="5dp"

        android:backgroundTint="@color/butlogin"
        android:fontFamily="@font/manrope_bold"

        android:insetTop="5dp"
        android:insetBottom="5dp"
        android:text="@string/buttonLogin"
        app:cornerRadius="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_bias="0.351" />


</androidx.constraintlayout.widget.ConstraintLayout>